# jupyterhub-options-spawner

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  version.py
optionsspawner/: __init__.py  optionsspawner.py
optionsspawner/forms/: __init__.py  base.py  characterfield.py  checkboxfield.py  selectfield.py
tests/: tests_checkbox_input_field.py  tests_numerical_input_field.py  tests_options_form.py  tests_select_field.py  tests_spawner.py  tests_text_input_field.py
