# Copyright (c) 2017, Zebula Sampedro, CU Boulder Research Computing.
# Distributed under the terms of the Modified BSD License.

# Copyright (c) Jupyter Development Team.
# Distributed under the terms of the Modified BSD License.
[metadata]
name = optionsspawner
description = Options Form Spawner: Mixins and utilities for adding options forms with validation to JupyterHub spawners
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kellyrowland/jupyterhub-options-spawner
author = Zebula Sampedro
author_email = sampedro@colorado.edu
license = BSD
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = Interactive, Interpreter, Shell, Web, Jupyter, JupyterHub
version = attr: version.__version__
platforms = Linux

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    wrapspawner
    tornado
    jupyterhub
    traitlets
